--- a/leetcode/java/pom.xml
+++ b/leetcode/java/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>me.schuman</groupId>
-    <artifactId>leetcodesolutions</artifactId>
+    <artifactId>java</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
